--- a/parts/web_controller/templates/base.html
+++ b/parts/web_controller/templates/base.html
@@ -2,7 +2,6 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Donkey Monitor </title>
   
   <script
     src="/static/jquery-3.1.1.min.js"
@@ -49,7 +48,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">Donkey</a>
+      <a class="navbar-brand" href="/">PML Self-driving Car</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
