remove unnecessary files

--- a/parts/web_controller/templates/vehicle.html
+++ b/parts/web_controller/templates/vehicle.html
@@ -12,7 +12,7 @@
             <br/>
             <div class="btn-group" data-toggle="buttons">
               <label class="btn btn-primary" id="joystick-toggle">
-                <input type="radio" name="controlMode" id="joystick" autocomplete="off" value="joystick"> 操纵杆
+                <input type="radio" name="controlMode" id="joystick" autocomplete="off" value="joystick"> 操纵杆(暂未实现)
               </label>
               
             </div>
