add car train model
Signed-off-by: lcw2 <wmy_lcw@163.com>

--- a/parts/web_controller/templates/vehicle.html
+++ b/parts/web_controller/templates/vehicle.html
@@ -3,18 +3,41 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
   <div class="container">
-
-  
     <div class="row">
       <div class="col-md-12">
         <div class="form-inline">
           <div class="form-group">
+            <label class="group-label">
+              Control Mode
+              <a data-toggle="modal" class="btn btn-primary btn-xs" data-target="#aboutControlModes">
+                <span class="glyphicon glyphicon-info-sign"></span>
+              </a>
+            </label>
             <br/>
             <div class="btn-group" data-toggle="buttons">
               <label class="btn btn-primary" id="joystick-toggle">
-                <input type="radio" name="controlMode" id="joystick" autocomplete="off" value="joystick"> 操纵杆(暂未实现)
+                <input type="radio" name="controlMode" id="joystick" autocomplete="off" value="joystick"> joystick
               </label>
-              
+            </div>
+          </div>
+           <div class="form-group" style="max-width:30%;">
+            <label class="group-label">Max Throttle</label><br/>
+            <div class="form-group">
+              <select id="max_throttle_select" class="form-control">
+                <option disabled selected> Select Max Throttle </option>
+                {% for t in [5, 10, 15, 20, 25, 30, 35, 40, 45, 50, 55, 60, 65, 70, 75, 80, 85, 90, 100] %}
+                  <option value="{{ t / 100.0 }}">{{ t }}%</option>
+                {% end %}
+              </select>
+            </div>
+          </div>
+          <div class="form-group" style="max-width:30%;">
+            <label class="group-label">Throttle Mode</label><br/>
+            <div class="form-group">
+              <select id="throttle_mode_select" class="form-control">
+                <option value="user" selected>User</option>
+                <option value="constant">Constant (Selected Max)</option>
+              </select>
             </div>
           </div>
         </div>
@@ -51,6 +74,24 @@
             </div>
           </div>
         </div>
+
+        <form>
+          <label>Mode &amp; Pilot</label>
+          <div class="form-group">
+            <select id="mode_select" class="form-control">
+              <option disabled selected> Select Mode </option>
+              <option value="user">User (d)</option>
+              <option value="local">Local Pilot (d)</option>
+              <option value="local_angle">Local Angle (d)</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <button type="button" id="record_button" class="btn btn-info btn-block">
+              Start Recording (r)
+            </button>
+          </div>
+        </form>
+
       </div>
 
       <div class="col-xs-8 col-sm-5 col-md-5"><!-- center column -->
@@ -69,8 +110,18 @@
     </div>
     <div id="joystick-padding"></div>
 
+    </div> <!-- END Container -->
+  <footer class="footer" id="vehicle_footer">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <button type="button" id="brake_button" class="btn btn-lg btn-success btn-block">Start Vehicle (space)</button>
+        </div>
+      </div>
+    </div>
+  </footer>
 
-  </div> <!-- END Container -->
+
 
 
   <!-- Modal -->
