--- a/edge/parts/web_controller/templates/vehicle.html
+++ b/edge/parts/web_controller/templates/vehicle.html
@@ -8,7 +8,7 @@
         <div class="form-inline">
           <div class="form-group">
             <label class="group-label">
-              Control Mode
+              控制模式
               <a data-toggle="modal" class="btn btn-primary btn-xs" data-target="#aboutControlModes">
                 <span class="glyphicon glyphicon-info-sign"></span>
               </a>
@@ -16,15 +16,15 @@
             <br/>
             <div class="btn-group" data-toggle="buttons">
               <label class="btn btn-primary" id="joystick-toggle">
-                <input type="radio" name="controlMode" id="joystick" autocomplete="off" value="joystick"> joystick
+                <input type="radio" name="controlMode" id="joystick" autocomplete="off" value="训练"> joystick
               </label>
             </div>
           </div>
            <div class="form-group" style="max-width:30%;">
-            <label class="group-label">Max Throttle</label><br/>
+            <label class="group-label">最大油门</label><br/>
             <div class="form-group">
               <select id="max_throttle_select" class="form-control">
-                <option disabled selected> Select Max Throttle </option>
+                <option disabled selected> 选择最大油门 </option>
                 {% for t in [5, 10, 15, 20, 25, 30, 35, 40, 45, 50, 55, 60, 65, 70, 75, 80, 85, 90, 100] %}
                   <option value="{{ t / 100.0 }}">{{ t }}%</option>
                 {% end %}
@@ -32,11 +32,11 @@
             </div>
           </div>
           <div class="form-group" style="max-width:30%;">
-            <label class="group-label">Throttle Mode</label><br/>
+            <label class="group-label">最大油门</label><br/>
             <div class="form-group">
               <select id="throttle_mode_select" class="form-control">
-                <option value="user" selected>User</option>
-                <option value="constant">Constant (Selected Max)</option>
+                <option value="user" selected>用户操控值</option>
+                <option value="constant">固定值 </option>
               </select>
             </div>
           </div>
@@ -76,18 +76,17 @@
         </div>
 
         <form>
-          <label>Mode &amp; Pilot</label>
+          <label>模式</label>
           <div class="form-group">
             <select id="mode_select" class="form-control">
-              <option disabled selected> Select Mode </option>
-              <option value="user">User (d)</option>
-              <option value="local">Local Pilot (d)</option>
-              <option value="local_angle">Local Angle (d)</option>
+              <option disabled selected> 选择模式 </option>
+              <option value="user">用户操控模式</option>
+              <option value="local">自动驾驶模式</option>
             </select>
           </div>
           <div class="form-group">
             <button type="button" id="record_button" class="btn btn-info btn-block">
-              Start Recording (r)
+                Start Recording
             </button>
           </div>
         </form>
@@ -115,8 +114,22 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <button type="button" id="brake_button" class="btn btn-lg btn-success btn-block">Start Vehicle (space)</button>
+          <button type="button" id="brake_button" class="btn btn-lg btn-success btn-block">运行小车</button>
         </div>
+          <div class="col-md-12">
+              <button type="button" id="train_button" class="btn btn-lg btn-success btn-block"> 训练 </button>
+          </div>
+          <div class="col-md-12">
+              <button type="button" id="tar_button" class="btn btn-lg btn-success btn-block"> 上传数据 </button>
+          </div>
+          <div class="col-md-12">
+              <button type="button" id="state_button" class="btn btn-lg btn-success btn-block"> 查询状态 </button>
+          </div>
+           <div class="col-md-12">
+              <button type="button" id="download_button" class="btn btn-lg btn-success btn-block"> 下载模型 </button>
+          </div>
+
+      </div>
       </div>
     </div>
   </footer>
