--- a/edge/parts/web_controller/templates/base.html
+++ b/edge/parts/web_controller/templates/base.html
@@ -3,10 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
-  <script
-    src="/static/jquery-3.1.1.min.js"
-    integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-    crossorigin="anonymous"></script>
+  <script src="/static/jquery-3.1.1.min.js"></script>
 
   <script
     src="/static/ui/1.12.1/jquery-ui.min.js"
@@ -18,7 +15,7 @@
 
 
   <link href="/static/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-  <script src="/static/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <script src="/static/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 
   <script type="text/javascript" src="/static/main.js"></script>
